@@ -49,7 +49,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        Class<?> result = resolver.getType(context, base, new Integer(0));
+        Class<?> result = resolver.getType(context, base, Integer.valueOf(0));
 
         Assert.assertEquals(base.getClass().getComponentType(), result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -65,7 +65,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.getType(context, base, new Integer(1));
+        resolver.getType(context, base, Integer.valueOf(1));
     }
 
     /**
@@ -112,7 +112,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        Object result = resolver.getValue(context, base, new Integer(0));
+        Object result = resolver.getValue(context, base, Integer.valueOf(0));
 
         Assert.assertEquals("element", result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -141,12 +141,12 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        Object result = resolver.getValue(context, base, new Integer(1));
+        Object result = resolver.getValue(context, base, Integer.valueOf(1));
 
         Assert.assertNull(result);
         Assert.assertTrue(context.isPropertyResolved());
 
-        result = resolver.getValue(context, base, new Integer(-1));
+        result = resolver.getValue(context, base, Integer.valueOf(-1));
 
         Assert.assertNull(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -192,16 +192,16 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, new Integer(0), "new-element");
+        resolver.setValue(context, base, Integer.valueOf(0), "new-element");
 
         Assert.assertEquals("new-element",
-                resolver.getValue(context, base, new Integer(0)));
+                resolver.getValue(context, base, Integer.valueOf(0)));
         Assert.assertTrue(context.isPropertyResolved());
 
-        resolver.setValue(context, base, new Integer(0), null);
+        resolver.setValue(context, base, Integer.valueOf(0), null);
 
         Assert.assertEquals(null,
-                resolver.getValue(context, base, new Integer(0)));
+                resolver.getValue(context, base, Integer.valueOf(0)));
         Assert.assertTrue(context.isPropertyResolved());
     }
 
@@ -228,7 +228,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, new Integer(1), "new-element");
+        resolver.setValue(context, base, Integer.valueOf(1), "new-element");
     }
 
     /**
@@ -242,7 +242,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, new Integer(0), new Integer(1));
+        resolver.setValue(context, base, Integer.valueOf(0), Integer.valueOf(1));
     }
 
     /**
@@ -256,7 +256,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         int[] base = new int[] { 1, 2, 3 };
-        resolver.setValue(context, base, new Integer(1), Integer.valueOf(4));
+        resolver.setValue(context, base, Integer.valueOf(1), Integer.valueOf(4));
 
         Assert.assertEquals(Integer.valueOf(base[1]), Integer.valueOf(4));
     }
@@ -304,14 +304,14 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        boolean result = resolver.isReadOnly(context, base, new Integer(0));
+        boolean result = resolver.isReadOnly(context, base, Integer.valueOf(0));
 
         Assert.assertFalse(result);
         Assert.assertTrue(context.isPropertyResolved());
 
         resolver = new ArrayELResolver(true);
 
-        result = resolver.isReadOnly(context, base, new Integer(0));
+        result = resolver.isReadOnly(context, base, Integer.valueOf(0));
 
         Assert.assertTrue(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -327,7 +327,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.isReadOnly(context, base, new Integer(1));
+        resolver.isReadOnly(context, base, Integer.valueOf(1));
     }
 
     /**
