@@ -54,7 +54,7 @@ public class TestListELResolver {
 
         List<String> list = new ArrayList<>();
         list.add("key");
-        Object result = resolver.getValue(context, list, new Integer(0));
+        Object result = resolver.getValue(context, list, Integer.valueOf(0));
 
         Assert.assertEquals("key", result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -85,12 +85,12 @@ public class TestListELResolver {
 
         List<String> list = new ArrayList<>();
         list.add("key");
-        Object result = resolver.getValue(context, list, new Integer(1));
+        Object result = resolver.getValue(context, list, Integer.valueOf(1));
 
         Assert.assertNull(result);
         Assert.assertTrue(context.isPropertyResolved());
 
-        result = resolver.getValue(context, list, new Integer(-1));
+        result = resolver.getValue(context, list, Integer.valueOf(-1));
 
         Assert.assertNull(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -125,7 +125,7 @@ public class TestListELResolver {
 
         List<String> list = new ArrayList<>();
         list.add("key");
-        Class<?> result = resolver.getType(context, list, new Integer(0));
+        Class<?> result = resolver.getType(context, list, Integer.valueOf(0));
 
         Assert.assertEquals(Object.class, result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -142,7 +142,7 @@ public class TestListELResolver {
 
         List<String> list = new ArrayList<>();
         list.add("key");
-        resolver.getType(context, list, new Integer(1));
+        resolver.getType(context, list, Integer.valueOf(1));
     }
 
     /**
@@ -187,10 +187,10 @@ public class TestListELResolver {
 
         List<String> list = new ArrayList<>();
         list.add("value");
-        resolver.setValue(context, list, new Integer(0), "value");
+        resolver.setValue(context, list, Integer.valueOf(0), "value");
 
         Assert.assertEquals("value",
-                resolver.getValue(context, list, new Integer(0)));
+                resolver.getValue(context, list, Integer.valueOf(0)));
         Assert.assertTrue(context.isPropertyResolved());
     }
 
@@ -204,7 +204,7 @@ public class TestListELResolver {
                 ELManager.getExpressionFactory());
 
         List<Object> list = Collections.unmodifiableList(new ArrayList<>());
-        resolver.setValue(context, list, new Integer(0), "value");
+        resolver.setValue(context, list, Integer.valueOf(0), "value");
     }
 
     /**
@@ -232,7 +232,7 @@ public class TestListELResolver {
 
         List<String> list = new ArrayList<>();
         list.add("key");
-        resolver.setValue(context, list, new Integer(1), "value");
+        resolver.setValue(context, list, Integer.valueOf(1), "value");
     }
 
     /**
@@ -279,14 +279,14 @@ public class TestListELResolver {
 
         List<String> list = new ArrayList<>();
         list.add("key");
-        boolean result = resolver.isReadOnly(context, list, new Integer(0));
+        boolean result = resolver.isReadOnly(context, list, Integer.valueOf(0));
 
         Assert.assertFalse(result);
         Assert.assertTrue(context.isPropertyResolved());
 
         resolver = new ListELResolver(true);
 
-        result = resolver.isReadOnly(context, list, new Integer(0));
+        result = resolver.isReadOnly(context, list, Integer.valueOf(0));
 
         Assert.assertTrue(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -305,7 +305,7 @@ public class TestListELResolver {
         list.add("key");
         List<String> unmodifiableList = Collections.unmodifiableList(list);
         boolean result = resolver.isReadOnly(context, unmodifiableList,
-                new Integer(0));
+                Integer.valueOf(0));
 
         Assert.assertTrue(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -322,7 +322,7 @@ public class TestListELResolver {
 
         List<String> list = new ArrayList<>();
         list.add("key");
-        resolver.isReadOnly(context, list, new Integer(1));
+        resolver.isReadOnly(context, list, Integer.valueOf(1));
     }
 
     /**
